Change mailing address

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="mailto:llell2232@yahoo.com">Contact</a>
+                        <a href="mailto:luuke192@gmail.com">Contact</a>
                     </li>
                 </ul>
             </div>
