--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Lucas' current role is as a QAA (Quality Assuance Analyst) for multiple company applications. He has
+                    <p>Lucas' current role is as a QAA (Quality Assurance Analyst) for multiple company applications. He has
                         also started work as a QAE (Quality Assurance Engineer). Lucas also is a junior developer who has
                         developed in HTML5/CSS3/Javascript, Swift, and familiar with structuring iOS applications.</p>
                 </div>
