Adds résumé link to portfolio NavBar

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="https://docs.google.com/document/d/1lpMeK_fnsSvjToIZ7GH0Uu2zILLxwru628YpApM_o_E/edit?usp=sharing">Résumé
+                        </a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="mailto:luuke192@gmail.com">Contact</a>
                     </li>
                 </ul>
