New tab for résumé

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="https://docs.google.com/document/d/1lpMeK_fnsSvjToIZ7GH0Uu2zILLxwru628YpApM_o_E/edit?usp=sharing">Résumé
+                        <a href="https://docs.google.com/document/d/1lpMeK_fnsSvjToIZ7GH0Uu2zILLxwru628YpApM_o_E/edit?usp=sharing" target="_blank">Résumé
                         </a>
                     </li>
                     <li class="page-scroll">
